<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <com.goldencarp.lingqianbao.view.custom.visualkeyboard.KeyboardView
        android:id="@+id/keyboard_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/keyboard_view"
        android:background="@color/key_normal_bg"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <ImageView
                android:id="@+id/iv_close"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/img_close"
                android:contentDescription="@string/app_name"
                android:layout_alignParentRight="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/input_operation_code"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="8dp"
            android:background="@color/btn_gray"/>

        <TextView
            android:id="@+id/tv_lap_tip"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimens_20_dp"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/dimens_15_sp"
            android:textColor="@color/tip_red"
            android:drawableLeft="@mipmap/ic_launcher"
            android:text="@string/wrong_opration_code"
            android:gravity="center_vertical"
            android:visibility="invisible"/>

        <com.goldencarp.lingqianbao.view.custom.visualkeyboard.AliPasswordView
            android:id="@+id/password_view"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="12dp"
            android:layout_marginLeft="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="32dp"
            android:layout_marginRight="12dp"
            android:text="@string/forget_password"
            android:visibility="gone"
            android:textColor="@android:color/holo_blue_dark"/>

    </LinearLayout>

</RelativeLayout>