<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pwdVisible="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher" />

            <com.goldencarp.lingqianbao.view.custom.ClearableEditText
                android:id="@+id/et_al_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/shape_black_rect_border"
                android:hint="@string/please_input_tel"
                android:maxLength="11"
                android:maxLines="1"
                android:inputType="number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_black_rect_border"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher" />

            <com.goldencarp.lingqianbao.view.custom.PwdClearableLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                pwdVisible:hint="@string/please_input_password"
                />

            <com.goldencarp.lingqianbao.view.custom.ClearableEditText
                android:id="@+id/et_al_pwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@null"
                android:inputType="textPassword"
                android:maxLength="18"
                android:maxLines="1"
                android:hint="@string/please_input_password"
                android:visibility="gone"/>

            <CheckBox
                android:id="@+id/cb_pwd_visible_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/selector_pwd_visible"
                android:button="@null"
                android:checked="false"
                android:visibility="gone"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>